# FTRP_app

example/: CMakeLists.txt  example-app  example-app copy.cpp  example-app.cpp  roi_align_rotated_cpu.cpp  roi_align_rotated_cpu.h  roi_align_rotated_cuda.cpp  roi_align_rotated_cuda.h  roi_align_rotated_kernel.cu
example/FTRP_software/: convert_script.py  convert_script_extract_fe.py  inference.py  setup.py  test_deformconv_script.py  test_extract_fe.py  test_script.py
example/FTRP_software/models/: alignconv.py  anchors.py  backbone.py  boxes.py  retinanet3 copy.py  retinanet3.py
example/FTRP_software/models/dcn/: __init__.py  deform_conv.py
example/FTRP_software/models/dcn/src/: deform_conv_cpu.cpp  deform_conv_cpu_kernel.cpp  deform_conv_cuda_kernel.cu
example/FTRP_software/utils/: general.py
example/FTRP_software/utils/box_iou_rotated/src/: box_iou_rotated_utils.h
example/FTRP_software/utils/roi_align_rotated/functions/: roi_align_rotated.py
example/FTRP_software/utils/roi_align_rotated/modules/: roi_align_rotated.py
example/FTRP_software/utils/roi_align_rotated/src/: roi_align_rotated_cuda.cpp  roi_align_rotated_kernel.cu
v1/: box_iou_rotated_utils.h  deduction.cpp  deduction.h  deduction.ui  detect.cpp  detect.h  detection.cpp  detection.h  detection.ui  hyperspectral.cpp  hyperspectral.h  hyperspectral.ui  infdeduction.cpp  infdeduction.h  infdeduction.ui  mainwin.cpp  mainwin.h  mainwin.ui  missile.qrc  nms.cpp  nms.h  nms_rotated.h  nms_rotated_cpu.cpp  nms_rotated_cpu.h  optdeduction.cpp  optdeduction.h  optdeduction.ui  probability.cpp  probability.h  probability.ui  roi_align_rotated_cpu.cpp  roi_align_rotated_cpu.h  sardeduction.cpp  sardeduction.h  sardeduction.ui  util.cpp  util.h  v1.pro
